Adding findspark init location

--- a/web/mysite/mysite/templates/mysite/events.html
+++ b/web/mysite/mysite/templates/mysite/events.html
@@ -19,7 +19,7 @@
 			  </div>
 			  <div class="panel-body">
 			  	<p><b>{{event.metadata.time}}</b></p>
-			  	<p>Predicted price change between now and event: <b>{{event.change|floatformat}}</b></p>	
+			  	<p>Predicted price change between now and event: <b>{{event.change|floatformat:3}}</b></p>	
 			    <p>Event {{event.row_index}}</p>			    
 			    <p>Venue: {{event.metadata.venue_name}}</p>
 			    <p>Location: {{event.metadata.eventLocation_facet_str}}, {{event.metadata.zip}}</p>
@@ -37,7 +37,7 @@
 			  </div>
 			  <div class="panel-body">
 			  	<p><b>{{event.metadata.time}}</b></p>
-			  	<p>Predicted price change between now and event: <b>{{event.change|floatformat}}</b></p>	
+			  	<p>Predicted price change between now and event: <b>{{event.change|floatformat:3}}</b></p>	
 			    <p>Event {{event.row_index}}</p>			    
 			    <p>Venue: {{event.metadata.venue_name}}</p>
 			    <p>Location: {{event.metadata.eventLocation_facet_str}}, {{event.metadata.zip}}</p>
