Adding realistic price display

--- a/web/mysite/mysite/templates/mysite/events.html
+++ b/web/mysite/mysite/templates/mysite/events.html
@@ -1,5 +1,5 @@
 <div class="alert alert-info" role="alert">
-	This query took <b>{{time|floatformat}}</b> seconds to execute.
+	This query took <b>{{time|floatformat}} seconds</b> to execute.
 </div>
 
 
