--- a/web/mysite/mysite/templates/mysite/overview.html
+++ b/web/mysite/mysite/templates/mysite/overview.html
@@ -97,7 +97,16 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+    <div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px">
+        <img src="http://i.imgur.com/XhL1QDZ.jpg" style="width: 50%; margin-left: 25%" alt="Parallel Ticket Pricing: CS205 Final Project for Nithin Tumma, Andrew Raftery, and Neel Patel">            
+        
+    </div>
+
     <div class="container">
+
+
+
 
     <section id="motivation">
             <h1>Motivation</h1>
