Added helper functions in test_regression

--- a/web/mysite/mysite/templates/mysite/overview.html
+++ b/web/mysite/mysite/templates/mysite/overview.html
@@ -89,7 +89,7 @@
                         <a href="#future_work">Future Work</a>
                     </li>
                     <li>
-                        <a href="https://github.com/neelspatel/CS205_Final_Project"><i class="fa fa-github"></i> GitHub</a>
+                        <a href="https://github.com/neelspatel/CS205_Final_Project" target="_blank"><i class="fa fa-github"></i> GitHub</a>
                     </li>
                 </ul>
             </div>
