--- a/web/mysite/mysite/templates/mysite/overview.html
+++ b/web/mysite/mysite/templates/mysite/overview.html
@@ -62,6 +62,10 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li>
+                        <a href="#video">Video</a>
+                    </li>
+
+                    <li>
                         <a href="#motivation">Motivation</a>
                     </li>
 
@@ -106,6 +110,10 @@
     <div class="container">
 
 
+    <section id="video">
+        <h1>Project Video</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VXXupQrVD8U" frameborder="0" allowfullscreen></iframe>
+    </section>
 
 
     <section id="motivation">
